--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1,11 +1,14 @@
+* {
+    font-family: "Passion One", sans-serif;
+}
+
+body {
+    font-size: x-large;
+}
+
 html, body, canvas {
     margin: 0;
     padding: 0;
-}
-
-/* remove scrolling */
-html, body {
-    overflow: hidden;
 }
 
 .webgl {
@@ -13,4 +16,174 @@ html, body {
     top: 0;
     left: 0;
     outline: none;
+}
+
+/* disable mouse input for disabled buttons */
+button:disabled, input[type=submit]:disabled {
+    pointer-events: none;
+}
+
+
+.styled {
+    margin: 12px;
+    border-radius: 0;
+    box-shadow:
+        /* -0.7em 0.7em black; */
+        -0.7em 0.7em black,
+        0.7em 0.3em black;
+    transform: skew(6deg) rotate(-1deg);
+    font-weight: bolder;
+    background-color: whitesmoke;
+
+    display: flex;
+    justify-content: center;
+}
+
+.styled > * {
+    margin: 0.5em;
+    transform: skew(-6deg) rotate(1deg);
+}
+
+button.styled {
+    transform: skew(10deg) rotate(-1.5deg);
+    border: none;
+    font-size: inherit;
+    background-color: #f0c115;
+    min-width: 9em;
+    min-height: 2em;
+    transition: 0.05s;
+    margin: 1em;
+}
+
+button.styled > * {
+    transform: skew(-10deg) rotate(1.5deg);
+}
+
+button.styled:hover {
+    background-color: #f0a715;
+}
+
+button.styled:active {
+    /* background-color: #ff8080; */
+    box-shadow:
+        -0.7em 0.35em black,
+        0.7em 0.15em black;
+    margin-top: 1.2em;
+    margin-bottom: 0.8em;
+}
+
+button.styled:disabled {
+    background-color: #c9c9c9;
+}
+
+
+input[type=text], input[type=email], input[type=password], textarea {
+    outline: none;
+    font-size: medium;
+    padding: 3px 0px 3px 3px;
+    margin: 5px 1px 3px 0px;
+    border: 1px solid #DDDDDD;
+}
+
+input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, textarea:focus {
+    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+    padding: 3px 0px 3px 3px;
+    margin: 5px 1px 3px 0px;
+    border: 1px solid rgba(81, 203, 238, 1);
+}
+
+
+.styled:has(h1) { padding-left: 4em; padding-right: 4em; }
+.styled:has(h2) { padding-left: 2em; padding-right: 2em; }
+.styled:has(h3) { padding-left: 1em; padding-right: 1em; }
+
+.hlayout {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-evenly; */
+}
+
+.vlayout {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-evenly; */
+}
+
+.hlayout.center, .vlayout.center {
+    align-items: center;
+}
+
+.hlayout.space-evenly, .vlayout.space-evenly {
+    justify-content: space-evenly;
+}
+
+
+/* Classes for ViewMgr animations */
+
+.show {
+    position: relative;
+    animation-name: appear;
+    animation-duration: 0.2s;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.hide {
+    position: relative;
+    animation-name: disappear;
+    animation-duration: 0.2s;
+    animation-timing-function: linear;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+
+/* Animations */
+
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+        left: -4em;
+    }
+    80% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+        left: 0px;
+    }
+}
+
+@keyframes disappear {
+    0% {
+        opacity: 1;
+        left: 0px;
+    }
+    20% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        left: 4em;
+    }
+}
+
+
+/* MOBILE VIEW */
+@media all and ((max-width: 480px) or (max-height: 480px)) {
+    body {
+        font-size: medium;
+    }
+}
+
+
+/* TABLET VIEW */
+@media all and (max-width: 820px) {
+
 }
