--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -49,13 +49,13 @@ button.styled {
     border: none;
     font-size: inherit;
     background-color: #f0c115;
-    min-width: 9em;
+    min-width: 5em;
     min-height: 2em;
     transition: 0.05s;
     margin: 1em;
 }
 
-button.styled > * {
+button.styled > *, button.styled::before, button.styled::after {
     transform: skew(-10deg) rotate(1.5deg);
 }
 
@@ -93,9 +93,9 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, tex
 }
 
 
-.styled:has(h1) { padding-left: 4em; padding-right: 4em; }
-.styled:has(h2) { padding-left: 2em; padding-right: 2em; }
-.styled:has(h3) { padding-left: 1em; padding-right: 1em; }
+.styled:has(h1) { padding-left: 4em; padding-right: 4em; margin-bottom: 1.5em; }
+.styled:has(h2) { padding-left: 2em; padding-right: 2em; margin-bottom: 1em; }
+.styled:has(h3) { padding-left: 1em; padding-right: 1em; margin-bottom: 0.5em; }
 
 .hlayout {
     width: 100%;
@@ -115,10 +115,114 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, tex
 
 .hlayout.center, .vlayout.center {
     align-items: center;
+    justify-content: center;
 }
 
 .hlayout.space-evenly, .vlayout.space-evenly {
     justify-content: space-evenly;
+}
+
+
+/* Lobby */
+
+
+.lobby-entry {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: #f6f6f6;
+    font-size: small;
+}
+
+.lobby-entry button { visibility: hidden; transition-duration: 0s; /* prevent dissapear being animated */ }
+.lobby-entry:hover button { visibility: visible; }
+
+.lobby-entry ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.4em;
+    list-style-type: none;
+    overflow: scroll;
+    padding: 0;
+
+    overflow: scroll;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.lobby-entry ul > li {
+    background-color: white;
+    border: 1px solid lightgray;
+    border-radius: 2em;
+    max-width: 6em;
+    padding: 0.2em 0.5em 0.2em 0.5em;
+
+    vertical-align: middle;
+    display: table-cell;
+    
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: clip ellipsis;
+}
+
+.lobby-entry .sub {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0em 1em 0em 1em;
+}
+
+.lobby-list {
+    min-width: 50vw;
+    max-width: 90vw;
+}
+
+.lobby-list-container {
+    overflow: scroll;
+    /* list-style-type: none; */
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    background-color: #f6f6f6;
+}
+
+.lobby-list .lobby-entry {
+    border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    padding: 12px;
+    display: block;
+}
+
+.lobby-list-controls {
+    display: flex;
+    justify-content: flex-end;
+    gap: 0.4em;
+
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+
+    background-color: #f6f6f6;
+    border: 1px solid #ddd;
+}
+
+.lobby-list-controls button {
+    width: 2em;
+}
+
+.lobby-list-status {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 2em;
+    background-color: #f6f6f6;
+}
+
+
+.locked::after {
+    content: "🔒";
 }
 
 
@@ -179,6 +283,10 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, tex
 @media all and ((max-width: 480px) or (max-height: 480px)) {
     body {
         font-size: medium;
+    }
+
+    .lobby-entry {
+        font-size: x-small;
     }
 }
 
