--- a/frontend/src/css/menu.css
+++ b/frontend/src/css/menu.css
@@ -30,7 +30,7 @@ body > * {
     backdrop-filter: blur(4px);
 }
 
-.popup-frame {
+.popup-frame, .msg-frame, .input-frame {
     position: absolute;
     top: 0px;
     left: 0px;
@@ -54,19 +54,6 @@ body > * {
     justify-content: space-evenly;
 }
 
-.msg-frame {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 1000;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .msg-container {
     padding: 0.7em 2.4em 0.7em 2.4em;
     background-color: whitesmoke;
@@ -75,6 +62,25 @@ body > * {
     align-items: center;
     justify-content: space-evenly;
 }
+
+.input-container {
+    width: 60vw;
+    height: 60vh;
+    padding: 0.5em;
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.input-form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1em;
+}
+
 
 /* MOBILE VIEW */
 @media all and (max-device-width: 480px) {
