--- a/frontend/src/css/menu.css
+++ b/frontend/src/css/menu.css
@@ -2,7 +2,7 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    background-image: url("/box-art.png");
+    background-image: url("/box-art.jpg");
 }
 
 body > * {
@@ -28,57 +28,6 @@ body > * {
     width: 100vw;
     height: 100vh;
     backdrop-filter: blur(4px);
-}
-
-.popup-frame, .msg-frame, .input-frame {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 1000;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.2);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.popup-container {
-    width: 60vw;
-    height: 60vh;
-    padding: 0.5em;
-    background-color: whitesmoke;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.msg-container {
-    padding: 0.7em 2.4em 0.7em 2.4em;
-    background-color: whitesmoke;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.input-container {
-    width: 60vw;
-    height: 60vh;
-    padding: 0.5em;
-    background-color: whitesmoke;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.input-form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1em;
 }
 
 
