Désactivation des boutons lors de l'attente d'une requête mieux gérée + Pas de focus des éléments sous une popup

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -66,6 +66,7 @@ button.styled {
     min-height: 2em;
     transition: 0.05s;
     margin: 1em;
+    nav-index: -1;
 }
 
 button.styled > *, button.styled::before, button.styled::after {
