--- a/frontend/src/css/lobby.css
+++ b/frontend/src/css/lobby.css
@@ -15,7 +15,8 @@
     align-items: center;
     gap: 0.4em;
 
-    overflow: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -49,7 +50,8 @@
 }
 
 .lobby-list-container {
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
     /* list-style-type: none; */
     width: 100%;
     height: 100%;
@@ -93,7 +95,7 @@
 .lobby-view {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     /* background-color: #f6f6f6; */
     /* font-size: small; */
 }
@@ -104,7 +106,9 @@
     align-items: center;
     gap: 0.4em;
 
-    overflow: scroll;
+    max-width: 90vw;
+    overflow-x: auto;
+    overflow-y: hidden;
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -115,7 +119,7 @@
     background-color: white;
     border: 1px solid lightgray;
     border-radius: 2em;
-    max-width: 6em;
+    max-width: 10em;
     padding: 0.2em 0.5em 0.2em 0.5em;
 
     vertical-align: middle;
@@ -128,7 +132,6 @@
 
 .lobby-view .sub {
     display: flex;
-    align-items: center;
     justify-content: space-between;
     /* padding: 0em 1em 0em 1em; */
 }
