ajustements dans css pour être + responsive pour les popups et icône hint champ Unlisted

--- a/frontend/src/css/lobby.css
+++ b/frontend/src/css/lobby.css
@@ -167,4 +167,9 @@
     .lobby-entry {
         font-size: x-small;
     }
+
+    .lobby-list {
+        min-width: 80vw;
+        max-width: 95vw;
+    }
 }
