--- a/frontend/src/css/friends.css
+++ b/frontend/src/css/friends.css
@@ -4,10 +4,10 @@ friend-panel {
     background: white;
     border: 1px solid #ccc;
     border-radius: 10px;
-    padding: 15px;
-    width: 300px;
-    top: 80px;
-    right: 20px;
+    padding: 0.6em;
+    width: 14em;
+    top: 4em;
+    right: 1em;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     font-family: sans-serif;
     z-index: 5;
@@ -25,19 +25,6 @@ friend-panel h3 {
 
 friend-panel button.styled {
     font-size: 0.75em;
-}
-
-#friend-panel-backdrop {
-    display: none;  /* start hidden */
-    position: fixed;
-    background: rgba(0, 0, 0, 0.3);
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 4;
 }
 
 #add-friend-name {
