--- a/frontend/src/css/friends.css
+++ b/frontend/src/css/friends.css
@@ -1,16 +1,6 @@
 friend-panel {
-    display: none;  /* start hidden */
-    position: fixed;
-    background: white;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 0.6em;
     width: 14em;
     top: 4em;
-    right: 1em;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    font-family: sans-serif;
-    z-index: 5;
 
     .empty-list-label {
         font-size: 0.75em;
@@ -18,8 +8,7 @@ friend-panel {
     };
 }
 
-friend-panel h3 {
-    margin-top: 0px;
+friend-panel .panel-title {
     margin-bottom: 0.4em;
 }
 
@@ -60,6 +49,8 @@ friend-entry {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: clip ellipsis;
+        /* show as pointer because clicking on the label opens up the profile panel for the account */
+        cursor: pointer;
     };
 
     .button-container {
@@ -94,11 +85,13 @@ friend-request-entry {
     align-items: center;
     margin-bottom: 5px;
 
-    span {
+    .friend-request-entry-label {
         max-width: 8em;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: clip ellipsis;
+        /* show as pointer because clicking on the label opens up the profile panel for the account */
+        cursor: pointer;
     };
 
     button {
