Affichage de quelques stats du joueur

--- a/frontend/src/css/profile.css
+++ b/frontend/src/css/profile.css
@@ -8,3 +8,17 @@ profile-panel .tab {
 profile-panel .tab-content {
     font-size: 0.8em;
 }
+
+other-profile-panel profile-info {
+    font-size: 0.8em;
+}
+
+profile-stats h3 {
+    margin-top: 0px;
+    margin-bottom: 0.4em;
+}
+
+profile-stats p {
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+}
